--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,19 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script src="js/es5-shim.min.js"></script>
-    <script src="js/es5-sham.min.js"></script>
-    <script src="js/json3.min.js"></script>
-    <script src="js/es6-shim.min.js"></script>
-    <script src="js/es6-sham.min.js"></script>
-    <script src="js/es7-shim@latest.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-sham.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/json3/3.3.2/json3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.34.2/es6-shim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.34.2/es6-sham.min.js"></script>
+    <script src="https://wzrd.in/standalone/es7-shim@latest"></script>
+    <!--<script src="js/es5-shim.min.js"></script>
+      <script src="js/es5-sham.min.js"></script>
+      <script src="js/json3.min.js"></script>
+      <script src="js/es6-shim.min.js"></script>
+      <script src="js/es6-sham.min.js"></script>
+      <script src="js/es7-shim@latest.js"></script>
+    -->
     <!--<script src="https://wzrd.in/standalone/es7-shim@latest"></script>-->
 
     <!--
